# kindle-insights

./: .gitignore  README.md  pyproject.toml
backend/app/: main.py
backend/app/database/: database.py  models.py
backend/app/parsing/: parser.py
backend/app/services/: clipping_service.py
